new build and translations in tables
